Added CWOP connection

--- a/.env.example
+++ b/.env.example
@@ -14,4 +14,9 @@ APRS_PASS = -1
 #APRS_FILTER = "t/w"
 APRS_FILTER = ""
 
+CWOP_SERVER = "cwop.aprs.net"
+CWOP_PORT = 14580
+CWOP_PASS = -1
+CWOP_FILTER = ""
+
 HTTP_PORT = 9090
