Added REST with tight data. Average cluster data

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,6 @@ APRS_FILTER = ""
 CWOP_SERVER = "cwop.aprs.net"
 CWOP_PORT = 14580
 CWOP_PASS = -1
-CWOP_FILTER = ""
+CWOP_FILTER = "t/w"
 
 HTTP_PORT = 9090
