--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,14 +1,42 @@
 version: '3.7'
 services:
+  proxy:
+    image: nginx:latest
+    hostname: proxy
+    ports:
+      - "${PROXY_HTTP_PORT}:80"
+      - "${PROXY_HTTPS_PORT}:443"
+    networks:
+      - dev
+
   mongodb:
     image: mongo:latest
     environment:
-      MONGO_INITDB_ROOT_USERNAME: aprs
-      MONGO_INITDB_ROOT_PASSWORD: aprs
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_DB_USER}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_DB_PASS}
     ports:
-      - 27017:27017
+      - "${MONGO_DB_PORT}:27017"
     volumes:
       - ./data/mongodb:/data/db
+    networks:
+      - dev
+
+  influxdb:
+    image: influxdb:latest
+    hostname: monitoring
+    volumes:
+      - ./data/influxdb:/var/lib/influxdb2
+      - ./provisioning/influxdb:/docker-entrypoint-initdb.d
+    environment:
+      DOCKER_INFLUXDB_INIT_MODE: setup
+      DOCKER_INFLUXDB_INIT_USERNAME: ${INFLUXDB_INIT_USERNAME}
+      DOCKER_INFLUXDB_INIT_PASSWORD: ${INFLUXDB_INIT_PASSWORD}
+      DOCKER_INFLUXDB_INIT_ORG: ${INFLUXDB_INIT_ORG}
+      DOCKER_INFLUXDB_INIT_BUCKET: ${INFLUXDB_INIT_BUCKET}
+      DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: ${INFLUXDB_INIT_ADMIN_TOKEN}
+      DOCKER_INFLUXDB_INIT_RETENTION: 180d
+    ports:
+      - "${INFLUXDB_PORT}:8086"
     networks:
       - dev
 
