Added FTP download of METAR information

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "Nicu Pavel <npavel@linuxconsulting.ro>",
     "license": "ISC",
     "dependencies": {
+        "basic-ftp": "^4.6.6",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "js-aprs-fap": "^1.1.1",
