API: Reduce initial data download. GUI: View bounds

--- a/docker/docker-compose.dev.volumes.yml
+++ b/docker/docker-compose.dev.volumes.yml
@@ -4,5 +4,8 @@ version: '3.7'
 services:
   proxy:
     volumes:
-      - ../gui:/usr/share/nginx/html/  
+      - ../gui:/usr/share/nginx/html/
+  weather:
+    volumes:
+      - ../:/weather-aprs/
   
