--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 DEVELOP_LOCALLY=0
 
-MONGO_DB_HOST='127.0.0.1'
+MONGO_DB_HOST='mongodb'
 MONGO_DB_PORT=27017
 MONGO_DB_NAME="aprs"
 MONGO_DB_USER="aprs"
