--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       - "${MONGO_DB_PORT}:27017"
     command: --quiet
     volumes:
-      - ./data/mongodb:/data/db
+      - weather_aprs_mongodb:/data/db
     networks:
       - dev
 
@@ -60,3 +60,6 @@ networks:
  dev:
    name: dev
    driver: bridge
+
+volumes:
+  weather_aprs_mongodb:
