docker: limit services logging

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,6 +5,10 @@ services:
       context: ../
       dockerfile: ./docker/dockerfiles/Dockerfile.nginx
     hostname: proxy
+    logging:
+      options:
+        max-size: "10m"
+        max-file: "3"
     ports:
       - "${PROXY_HTTP_PORT}:80"
       - "${PROXY_HTTPS_PORT}:443"
@@ -19,6 +23,10 @@ services:
     build:
       context: ../
       dockerfile: ./docker/dockerfiles/Dockerfile.weather${DOCKERFILE_EXT}
+    logging:
+      options:
+        max-size: "10m"
+        max-file: "3"
     ports:
       - "${API_HTTP_PORT}"
     networks:
@@ -29,6 +37,10 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_DB_USER}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_DB_PASS}
+    logging:
+      options:
+        max-size: "10m"
+        max-file: "3"
     ports:
       - "${MONGO_DB_PORT}:27017"
     command: --quiet
